# Beadler

./: CMakeLists.txt  README.md  conanfile.py
assets/: FormBuilder.fbp  To do.txt
cmake/: conan.cmake
include/: App.hpp  ColorData.hpp  ColorDifference.hpp  Dispatcher.hpp  Job.hpp  JobEvents.hpp  JobManager.hpp  JobsFrame.hpp  MainFrame.hpp  ScrolledWindow.hpp  SpritePanel.hpp  SpriteScrolledPanel.hpp
src/: App.cpp  CMakeLists.txt  ColorDifference.cpp  Job.cpp  JobManager.cpp  JobsFrame.cpp  MainFrame.cpp  ScrolledWindow.cpp  SpritePanel.cpp  SpriteScrolledPanel.cpp  main.cpp
